# RealTimeInference

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  eval.py  eval.sh  inference.py  inference.sh  main_cloud.py  main_local.py  setup.sh  setup_docker.sh  train.py  train.sh
config/scannet/: train_default.gin
config/semantic_kitti/: eval_default.gin  eval_main.gin  eval_max.gin  eval_res16unet34c.gin  eval_res16unet34c_prob.gin  eval_res16unet34c_probmg.gin  inference_default.gin  inference_max.gin  inference_res16unet34c_prob.gin  train_default.gin  train_main.gin  train_max.gin  train_res16unet34c.gin  train_res16unet34c_prob.gin  train_res16unet34c_probmg.gin
cpp_src/: main.cpp  my_application.cpp
docker/: Dockerfile
include/: my_application.h
scrips/: setup.sh  setup_docker.sh
scripts/: eval.sh  inference.sh  main_cloud.sh  main_local.sh  setup.sh  setup_docker.sh  train.sh
src/communication/: client.py  server.py
src/cuda_ops/src/dot_product/: dot_product.cpp
src/cuda_ops/src/scalar_attention/: scalar_attention.cpp
src/data/: semantic_kitti_loader.py  transforms.py
src/losses/: metric_loss.py
src/mbox/: qn_mu.py
src/modules/: segmentation.py
src/utils/: file.py
